container alignment fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,6 @@
 body {
   max-width: 1920px;
   margin: 0 auto;
-  padding: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -35,7 +34,7 @@ body {
 }
 
 .container {
-  @apply lg:px-[96px] px-5;
+  @apply lg:px-[70px] px-5 mx-auto;
 }
 
 .user-avatar {
